--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </section>
     </section>
 
+    <p class="bliss">with ❤️ by BlisS</p>
     
     <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
